# poc-intersystem

./: compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 16352f6ff93a_create_users_table.py  3bf69a8b19ab_create_raw_consumes_table.py
poc_intersystem/: app.py  database.py  fit.py  models.py
poc_intersystem/helpers/: deps.py  settings.py
poc_intersystem/routers/: __init__.py  database.py  users.py
poc_intersystem/schemas/: __init__.py  database.py  users.py
tests/: conftest.py  factories.py  test_app.py  test_db.py  test_fit.py
tests/routers/: test_database.py  test_users.py
