[project]
name = "poc-intersystem"
version = "0.1.0"
description = ""
authors = [
    {name = "RWallan",email = "3am.richardwallan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy-iris[intersystems] (>=0.17.0,<0.18.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pandera (>=0.23.1,<0.24.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "setuptools (>=78.0.2,<79.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
httpx = "^0.28.1"
pytest-faker = "^2.0.0"
factory-boy = "^3.3.3"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev poc_intersystem/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=poc_intersystem -vv'
post_test = 'coverage html'
